--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -1,22 +1,8 @@
-/* input.form-control::placeholder {
-  color:black;
 
-}
-input.form-control{
-  background-color:rgb(225, 206, 179)
-}
-.my-form{
-  background-color: rgb(182, 149, 149) ;
-}
-input:focus{
-  background-color: rgb(94, 89, 82);
-}
-.btn{
-  background-color: rgb(115, 82, 79);
-  border: none;
-  color: white;
-} */
 
 #nprogress .bar{
   height: 8px !important;
+}
+.ql-editor{
+  min-height :300px
 }
